sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var n=getNombreValeurs()
	
while( for (k<- 0 to n-2){
		plusPetit(k,k+1)
	}
	)
	{
	
		for (k<- 0 to n-2){
			if (plusPetit(k+1,k)){
				echange(k+1,k)
			}
		}
	}
}
